[feat] 프로젝트 생성시 owner 처리 및 맴버-프로젝트 관계 테이블 생성